--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -7056,7 +7056,7 @@
    "id": "3c696862-1fc0-49fb-9088-be3a18d12b27",
    "metadata": {},
    "source": [
-    "Which countries are adding more numbr of content over the time"
+    "Which countries are adding more number of content over the time"
    ]
   },
   {
