--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -7229,21 +7229,21 @@
    "id": "d1dcd199-bb88-46f3-bbde-8033841df9fb",
    "metadata": {},
    "source": [
-    "Around 70% content on Netflix is Movies and around 30% content is TV shows.\n",
-    "The movies and TV shows uploading on the Netflix started from the year 2008, It had very lesser content till 2014.\n",
-    "Year 2015 marks the drastic surge in the content getting uploaded on Netflix. It continues the uptrend since then and 2019 marks the highest number of movies and TV shows added on the Netflix. Year 2020 and 2021 has seen the drop in content added on Netflix, possibly because of Pandemic. But still , TV shows content have not dropped as drastic as movies.\n",
-    "Since 2018, A drop in the movies is seen , but rise in TV shows is observed clearly. Being in continuous uptrend , TV shows surpassed the movies count in mid 2020. It shows the rise in popularity of tv shows in recent years.\n",
-    "Netflix has movies from variety of directors. Around 4993 directors have their movies or tv shows on Netflix.\n",
-    "Netflix has movies from total 122 countries, United States being the highset contributor with almost 37% of all the content.\n",
-    "The release year for shows is concentrated in the range 2005-2021.\n",
-    "50 mins - 150 mins is the range of movie durations, excluding potential outliers.\n",
-    "1-3 seasons is the range for TV shows seasons, excluding potential outliers.\n",
-    "various ratings of content is avaialble on netfilx, for the various viewers categories like kids, adults , families. Highest number of movies and TV shows are rated TV-MA (for mature audiences).\n",
-    "Content in most of the ratings is available in lesser quanitity except in US. Ratings like TV-Y7 , TV-Y7 FV , PG ,TV-G , G , TV-Y , TV-PG are very less avaialble in all countries except US.\n",
-    "International Movies and TV Shows , Dramas , and Comedies are the top 3 genres on Netflix for both Movies and TV shows.\n",
-    "Mostly country specific popular genres are observed in each country. Only United States have a good mix of almost all genres. Eg. Korean TV shows (Korea), British TV Shows (UK), Anime features and Anime series (Japan) and so on.\n",
-    "Indian Actors have been acted in maximum movies on netflix. Top 5 actors are in India based on quantity of movies.\n",
-    "Shorter duration movies have been popular in last 10 years."
+    "* Around 70% content on Netflix is Movies and around 30% content is TV shows.\n",
+    "* The movies and TV shows uploading on the Netflix started from the year 2008, It had very lesser content till 2014.\n",
+    "* Year 2015 marks the drastic surge in the content getting uploaded on Netflix. It continues the uptrend since then and 2019 marks the highest number of movies and TV shows added on the Netflix. Year 2020 and 2021 has seen the drop in content added on Netflix, possibly because of Pandemic. But still , TV shows content have not dropped as drastic as movies.\n",
+    "* Since 2018, A drop in the movies is seen , but rise in TV shows is observed clearly. Being in continuous uptrend , TV shows surpassed the movies count in mid 2020. It shows the rise in popularity of tv shows in recent years.\n",
+    "* Netflix has movies from variety of directors. Around 4993 directors have their movies or tv shows on Netflix.\n",
+    "* Netflix has movies from total 122 countries, United States being the highset contributor with almost 37% of all the content.\n",
+    "* The release year for shows is concentrated in the range 2005-2021.\n",
+    "* 50 mins - 150 mins is the range of movie durations, excluding potential outliers.\n",
+    "* 1-3 seasons is the range for TV shows seasons, excluding potential outliers.\n",
+    "* various ratings of content is avaialble on netfilx, for the various viewers categories like kids, adults , families. Highest number of movies and TV shows are rated TV-MA (for mature audiences).\n",
+    "* Content in most of the ratings is available in lesser quanitity except in US. Ratings like TV-Y7 , TV-Y7 FV , PG ,TV-G , G , TV-Y , TV-PG are very less avaialble in all countries except US.\n",
+    "* International Movies and TV Shows , Dramas , and Comedies are the top 3 genres on Netflix for both Movies and TV shows.\n",
+    "* Mostly country specific popular genres are observed in each country. Only United States have a good mix of almost all genres. Eg. Korean TV shows (Korea), British TV Shows (UK), Anime features and Anime series (Japan) and so on.\n",
+    "* Indian Actors have been acted in maximum movies on netflix. Top 5 actors are in India based on quantity of movies.\n",
+    "* Shorter duration movies have been popular in last 10 years."
    ]
   },
   {
@@ -7259,18 +7259,19 @@
    "id": "cebd0007-4513-4d32-acef-bef102fa9c3f",
    "metadata": {},
    "source": [
-    "Netflix have majority of content which is released after the year 2000. It is observed that the content older than year 2000 is very scarce on Netflix. Senior Citizen could be the target audience for such content, which is almost missing currently.\n",
-    "Maximum content (more than 80%) is\n",
-    " TV-MA - Content intended for mature audiences aged 17 and above.\n",
-    " TV-14 - Content suitable for viewers aged 14 and above.\n",
-    " TV-PG - Parental guidance suggested (similar ratings - PG-13 , PG)\n",
-    "R - Restricted Content, that may not be suitable for viewers under age 17.\n",
-    "These ratings' movies target Matured and Adult audience. Rest 20 % of the content is for kids aged below 13. It shows that Netflix is currently serving mostly Mature audiences or Children with parental guidance.\n",
+    "* Netflix have majority of content which is released after the year 2000. It is observed that the content older than year 2000 is very scarce on Netflix. Senior Citizen could be the target audience for such content, which is almost missing currently.\n",
+    "* Maximum content (more than 80%) is\n",
+    "   * TV-MA - Content intended for mature audiences aged 17 and above.\n",
+    "   * TV-14 - Content suitable for viewers aged 14 and above.\n",
+    "   * TV-PG - Parental guidance suggested (similar ratings - PG-13 , PG)\n",
+    "   * R - Restricted Content, that may not be suitable for viewers under age 17.\n",
     "\n",
-    "Most popular genres on Netflix are International Movies and TV Shows , Dramas , Comedies, Action & Adventure, Children & Family Movies, Thrillers.\n",
-    "Maximum content of Netflix which is around 75% , is coming from the top 10 countries. Rest of the world only contributes 25% of the content. More countries can be focussed in future to grow the business.\n",
+    "* These ratings' movies target Matured and Adult audience. Rest 20 % of the content is for kids aged below 13." 
+    "It shows that Netflix is currently serving mostly Mature audiences or Children with parental guidance.\n",
+    "* Most popular genres on Netflix are International Movies and TV Shows , Dramas , Comedies, Action & Adventure, Children & Family Movies, Thrillers.\n",
+    "* Maximum content of Netflix which is around 75% , is coming from the top 10 countries. Rest of the world only contributes 25% of the content. More countries can be focussed in future to grow the business.\n",
     "Liking towards the shorter duration content is on the rise. (duration 75 to 150 minutes and seasons 1 to 3) This can be considered while production of new content on Netflix.\n",
-    "drop in content is seen across all the countries and type of content in year 2020 and 2021, possibly because of Pandemic."
+    "* drop in content is seen across all the countries and type of content in year 2020 and 2021, possibly because of Pandemic."
    ]
   },
   {
@@ -7286,17 +7287,13 @@
    "id": "254bd78d-8c52-44dd-bac5-3bf0c04fe9c2",
    "metadata": {},
    "source": [
-    "Very limited genres are focussed in most of the countries except US. \n",
-    "It seems the current available genres suits best for US and few countries but maximum countries need some more genres which are highly popular in the region.\n",
-    "eg. Indian Mythological content is highly popular.\n",
-    "We can create such more country specific genres and It might also be liked acorss the world just like Japanese Anime.\n",
-    "Country specific insights - The content need to be targetting the demographic of any country. \n",
-    "Netflix can produce higher number of content in the perticular rating as per demographic of the country. \n",
-    "Eg.The country like India , which is highly populous , has maximum content available only in three rating TV-MA, TV-14 , TV-PG. \n",
-    "It is unlikely to serve below 14 age and above 35 year age group .\n",
-    "Country Japan have only 3 rating of content largely served - TV-MA, TV-14 , TV-PG. Japan have high population of age above 60, and this can be served by increasing the content suitable for this age group.\n",
-    "Netflix is currently serving mostly Mature audiences or Children with parental guidance.\n",
-    "It have scope to cater other audiences as well such as familymen , Senior citizen , kids of various age etc.   "
+    "* Very limited genres are focussed in most of the countries except US.It seems the current available genres suits best for US and few countries but maximum countries need some more genres which are highly popular in the region.\n",
+    "eg. Indian Mythological content is highly popular.We can create such more country specific genres and It might also be liked acorss the world just like Japanese Anime.\n",
+    "* Country specific insights - The content need to be targetting the demographic of any country.Netflix can produce higher number of content in the perticular rating as per demographic of the country. \n",
+    "   * The country like India , which is highly populous , has maximum content available only in three rating TV-MA, TV-14 , TV-PG.It is unlikely to serve below 14 age and above 35 year age group .\n",
+    "* Country Japan have only 3 rating of content largely served - TV-MA, TV-14 , TV-PG. 
+    "Japan have high population of age above 60, and this can be served by increasing the content suitable for this age group.\n",
+    "* Netflix is currently serving mostly Mature audiences or Children with parental guidance.It have scope to cater other audiences as well such as familymen , Senior citizen , kids of various age etc."
    ]
   },
   {
